// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overwriteRequestHeaders should append to the header when overwrite is false 1`] = `
Object {
  "x-apideck-app-id": "2222foo-bar-baz",
  "x-apideck-consumer-id": "test_consumer",
  "x-apideck-service-id": "salesforce",
}
`;

exports[`overwriteRequestHeaders should disable the request headers variable 1`] = `
Array [
  Object {
    "description": Object {
      "content": "(Required) ID of the consumer which you want to get or push data from",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "x-apideck-consumer-id",
    "value": "test_consumer",
  },
  Object {
    "description": Object {
      "content": "(Required) The ID of your Unify application",
      "type": "text/plain",
    },
    "disabled": true,
    "key": "x-apideck-app-id",
    "value": "2222",
  },
  Object {
    "description": Object {
      "content": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "x-apideck-service-id",
    "value": "salesforce",
  },
]
`;

exports[`overwriteRequestHeaders should insert the request headers variable with description, if key not found 1`] = `
Object {
  "add-a-header": "foo-bar-baz",
  "x-apideck-app-id": "2222",
  "x-apideck-consumer-id": "test_consumer",
  "x-apideck-service-id": "salesforce",
}
`;

exports[`overwriteRequestHeaders should insert the request headers variable with true insert option, if key not found 1`] = `
Object {
  "add-a-header": "foo-bar-baz",
  "x-apideck-app-id": "2222",
  "x-apideck-consumer-id": "test_consumer",
  "x-apideck-service-id": "salesforce",
}
`;

exports[`overwriteRequestHeaders should insert the request headers variable, if key not found 1`] = `
Object {
  "add-a-header": "foo-bar-baz",
  "x-apideck-app-id": "2222",
  "x-apideck-consumer-id": "test_consumer",
  "x-apideck-service-id": "salesforce",
}
`;

exports[`overwriteRequestHeaders should overwrite the header variable with a blank value 1`] = `
Object {
  "x-apideck-app-id": "",
  "x-apideck-consumer-id": "test_consumer",
  "x-apideck-service-id": "salesforce",
}
`;

exports[`overwriteRequestHeaders should overwrite the request headers number variable with string value 1`] = `
Object {
  "x-apideck-app-id": "-1",
  "x-apideck-consumer-id": "test_consumer",
  "x-apideck-service-id": "salesforce",
}
`;

exports[`overwriteRequestHeaders should overwrite the request headers variable 1`] = `
Object {
  "x-apideck-app-id": "foo-bar-baz",
  "x-apideck-consumer-id": "test_consumer",
  "x-apideck-service-id": "salesforce",
}
`;

exports[`overwriteRequestHeaders should remove to the header when remove is true 1`] = `
Object {
  "x-apideck-consumer-id": "test_consumer",
  "x-apideck-service-id": "salesforce",
}
`;

exports[`overwriteRequestHeaders should skip the request headers variable with false insert option, if key not found 1`] = `
Object {
  "x-apideck-app-id": "2222",
  "x-apideck-consumer-id": "test_consumer",
  "x-apideck-service-id": "salesforce",
}
`;
